force-app/main/default/objects/Motion__c/Motion__c.object-meta.xml
<CustomObject>
    <description>Guarda los movimientos de los pokemones</description>
    <label>Motion</label>
    <nameField>
        <label>Motion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>