force-app/main/default/objects/Motion__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>Este valor va en el rango numèrico de 0 a 100</description>
    <label>Punteria</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>