force-app/main/default/objects/Motion__c/fields/EffectChance__c.field-meta.xml
<CustomField>
    <fullName>EffectChance__c</fullName>
    <description>Está en el rango de 0 al 100%</description>
    <inlineHelpText>Los movimientos del Pòkemon pueden tener un efecto secundario, bien sea afectar el estado o disminuir las estadística del oponente,</inlineHelpText>
    <label>Chance de Efecto</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>