force-app/main/default/objects/Motion__c/fields/EffectEntriesShortEffect__c.field-meta.xml
<CustomField>
    <fullName>EffectEntriesShortEffect__c</fullName>
    <inlineHelpText>Frase corta para describir el efecto principal del movimiento.</inlineHelpText>
    <label>Efecto</label>
    <type>TextArea</type>
</CustomField>