force-app/main/default/objects/Motion__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <inlineHelpText>Nùmero referenciado con el Id de la Api</inlineHelpText>
    <label>ExtId</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>