force-app/main/default/objects/Motion__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <inlineHelpText>Es un valor entre 0 y 250</inlineHelpText>
    <label>Poder</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>