force-app/main/default/objects/Motion__c/fields/Pp__c.field-meta.xml
<CustomField>
    <fullName>Pp__c</fullName>
    <inlineHelpText>Cantidad de veces que un movimiento  puede ser usado antes de agotarse. Se conoce como Puntos de poder</inlineHelpText>
    <label>Pp</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>