force-app/main/default/objects/Motion__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Este valor puede estar en el rango desde -6 a 6</inlineHelpText>
    <label>Prioridad</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>