force-app/main/default/objects/Motion__c/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <description>Objetivo Específico del movimiento</description>
    <label>Objetivo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>